--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
         <link rel="stylesheet" href="stile.css">
     </head>
     <body>
-        <div id="finestra">
-            Prova
-        </div>
+
+        <div id="display">12345689</div>
+        <br/>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <br/>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <br/>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
     </body>
 </html>
