--- a/index.html
+++ b/index.html
@@ -12,33 +12,33 @@
                 <td colspan="4"><input id="risultato" type="text" class="risultato" readonly></td>
             </tr>
             <tr>
-                <td><input type="button" value="9" class="bottoneNum" onclick="mostra(9)"></td>
-                <td><input type="button" value="8" class="bottoneNum" onclick="mostra(8)"></td>
-                <td><input type="button" value="7" class="bottoneNum" onclick="mostra(7)"></td>
-                <td><input type="button" value="/" class="bottoneOpe" onclick="mostra('/')"></td>
+                <td><input type="button" value="9" class="bottoneNum" onclick="input(9)"></td>
+                <td><input type="button" value="8" class="bottoneNum" onclick="input(8)"></td>
+                <td><input type="button" value="7" class="bottoneNum" onclick="input(7)"></td>
+                <td><input type="button" value="/" class="bottoneOpe" onclick="input('/')"></td>
             </tr>
             <tr>
-                <td><input type="button" value="6" class="bottoneNum" onclick="mostra(6)"></td>
-                <td><input type="button" value="5" class="bottoneNum" onclick="mostra(5)"></td>
-                <td><input type="button" value="4" class="bottoneNum" onclick="mostra(4)"></td>
-                <td><input type="button" value="x" class="bottoneOpe" onclick="mostra('x')"></td>
+                <td><input type="button" value="6" class="bottoneNum" onclick="input(6)"></td>
+                <td><input type="button" value="5" class="bottoneNum" onclick="input(5)"></td>
+                <td><input type="button" value="4" class="bottoneNum" onclick="input(4)"></td>
+                <td><input type="button" value="*" class="bottoneOpe" onclick="input('*')"></td>
             </tr>
             <tr>
-                <td><input type="button" value="3" class="bottoneNum" onclick="mostra(3)"></td>
-                <td><input type="button" value="2" class="bottoneNum" onclick="mostra(2)"></td>
-                <td><input type="button" value="1" class="bottoneNum" onclick="mostra(1)"></td>
-                <td><input type="button" value="-" class="bottoneOpe" onclick="mostra('-')"></td>
+                <td><input type="button" value="3" class="bottoneNum" onclick="input(3)"></td>
+                <td><input type="button" value="2" class="bottoneNum" onclick="input(2)"></td>
+                <td><input type="button" value="1" class="bottoneNum" onclick="input(1)"></td>
+                <td><input type="button" value="-" class="bottoneOpe" onclick="input('-')"></td>
             </tr>
             <tr>
-                <td><input type="button" value="," class="bottoneNum" onclick="mostra(',')"></td>
-                <td><input type="button" value="0" class="bottoneNum" onclick="mostra(0)"></td>
-                <td><input type="button" value="C" class="bottoneNum" onclick="mostra('C')"></td>
-                <td><input type="button" value="+" class="bottoneOpe" onclick="mostra('+')"></td>
+                <td><input type="button" value="." class="bottoneNum" onclick="input('.')"></td>
+                <td><input type="button" value="0" class="bottoneNum" onclick="input(0)"></td>
+                <td><input type="button" value="C" class="bottoneReset" onclick="input('C')"></td>
+                <td><input type="button" value="+" class="bottoneOpe" onclick="input('+')"></td>
             </tr>
             <tr>
-                <td><input type="button" value="%" class="bottoneOpe" onclick="mostra('%')"></td>
-                <td><input type="button" value="+/-" class="bottoneOpe" onclick="mostra('+/-')"></td>
-                <td colspan="2"><input type="button" value="=" class="bottoneUgu" onclick="mostra('=')"></td>
+                <td><input type="button" value="%" class="bottoneSpecial" onclick="input('%')"></td>
+                <td><input type="button" value="+/-" class="bottoneSpecial" onclick="input('+/-')"></td>
+                <td colspan="2"><input type="button" value="=" class="bottoneUgu" onclick="input('=')"></td>
             </tr>
         </table>
     </div>
